Network/nginx/ingresses/elastic-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: elastic.server.no
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: quickstart-es-http
            port:
              number: 9200
