Network/nginx/ingresses/gui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gui-iot-ingress
  namespace: iot-gui
spec:
  ingressClassName: nginx
  rules:
  - host: iot.server.no
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gui-iot
            port:
              number: 5000
