Network/nginx/ingresses/jaeger-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: jaeger
spec:
  ingressClassName: nginx
  rules:
  - host: jaeger.server.no
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jaeger-query
            port:
              number: 16686
