Network/nginx/ingresses/long-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
  - host: long.server.no
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 8000
